--- a/src/app/Components/home-loan/home-loan.component.html
+++ b/src/app/Components/home-loan/home-loan.component.html
@@ -1,23 +1,47 @@
-<section>
-  <div class="container mt-5">
+<section style="margin-top:-47px;">
+  <div class="container mt-5 ">
     <div class="row">
       <div class="col-sm-12">
         <div class="accordion_wrapp box_style">
           <div class="accordion" id="myAccordion">
             <br />
-            <button
-              type="button"
-              class="btn btn-danger"
-              data-toggle="collapse"
-              data-target="#collapsible-1"
-            >
-              <span class=""></span>Salaried employees<span
-                class="indicator"
-              ></span>
+            <button type="button" class="btn btn-primary btn-lg btn-block btn-position btn-color" data-toggle="collapse"
+              data-target="#collapsible-1">
+              <span class=""></span>Salaried employees<span class="indicator"></span>
             </button>
+            <div id="collapsible-1" data-parent="#myAccordion" class="collapse" style="margin: 50px;">
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm">
+                    <h4>Age</h4>
+                    <ul class="list">
+                      <li>21 years to 70 years</li>
+                      <li>
+                        NOTE: This home loan can be availed only till an individual
+                        remains an income contributor.
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col-sm">
+                    <h4>Employment</h4>
+                    <p>Individuals working under the following can apply:</p>
+                    <ul class="list">
+                      <li>Government Institution</li>
+                      <li>Private sector</li>
+                      <li>Public sector</li>
+                      <li>MNCs or related companies</li>
+                      <li>Partnership Firms</li>
+                      <li>Proprietorship concern</li>
+                      <li>NGOs or related organisations</li>
+                    </ul>
+                  </div>
+                  <div class="col-sm">
+                    <h4>Home Loan Documents</h4>
+                  </div>
+                </div>
+              </div>
 
-            <div id="collapsible-1" data-parent="#myAccordion" class="collapse">
-              <div class="accord_content col-md-6">
+              <!-- <div class="accord_content col-md-6">
                 <h4>Age</h4>
                 <ul class="list">
                   <li>21 years to 70 years</li>
@@ -36,24 +60,23 @@
                   <li>Partnership Firms</li>
                   <li>Proprietorship concern</li>
                   <li>NGOs or related organisations</li>
-                </ul>
+                </ul> -->
+              <div>
+                <button type="button" class="applyBtn  btn-lg col-md-12 " routerLink="/registration" style="width:15%">
+                  Apply
+                </button>
               </div>
+
             </div>
             <br />
 
-            <button
-              type="button"
-              class="btn btn-danger mb-1"
-              data-toggle="collapse"
-              data-target="#collapsible-2"
-            >
-              <span class="text-center"></span>Self-employed individuals:<span
-                class="indicator"
-              ></span>
+            <button type="button" class="btn btn-primary btn-lg btn-block mb-1 btn-color" data-toggle="collapse"
+              data-target="#collapsible-2">
+              <span class="text-center"></span>Self-employed individuals:<span class="indicator"></span>
             </button>
 
             <div id="collapsible-2" data-parent="#myAccordion" class="collapse">
-              <div class="accord_content">
+              <!-- <div class="accord_content">
                 <h4>Age</h4>
                 <p>23 years - 70 years</p>
                 <h4>Employment</h4>
@@ -66,18 +89,46 @@
                     etc.
                   </li>
                 </ul>
+               
+              </div> -->
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm">
+                    <h4>Age</h4>
+                    <ul class="list">
+                      <li>23 years - 70 years</li>
+                      <li>
+                        Self-employed professionals (doctors, architects, etc)
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col-sm">
+                    <h4>Employment</h4>
+                    <p>Individuals working under the following can apply:</p>
+                    <ul class="list">
+                      <li>Government Institution</li>
+                      <li>Private sector</li>
+                      <li>Public sector</li>
+                      <li>MNCs or related companies</li>
+                      <li>Partnership Firms</li>
+                      <li>Proprietorship concern</li>
+                      <li>NGOs or related organisations</li>
+                    </ul>
+                  </div>
+                  <div class="col-sm">
+                    <h4>Home Loan Documents</h4>
+                  </div>
+                </div>
               </div>
+
+              <button type="button" class="applyBtn btn-secondary btn-lg" style="width:20%">
+                Apply
+              </button>
             </div>
             <br />
-            <button
-              type="button"
-              class="btn btn-danger mb-1"
-              data-toggle="collapse"
-              data-target="#collapsible-3"
-            >
-              <span class="text-center"></span>Pradhan Mantri Awas Yojana<span
-                class="indicator"
-              ></span>
+            <button type="button" class="btn btn-primary btn-lg btn-block mb-1 btn-color" data-toggle="collapse"
+              data-target="#collapsible-3">
+              <span class="text-center"></span>Pradhan Mantri Awas Yojana<span class="indicator"></span>
             </button>
 
             <div id="collapsible-3" data-parent="#myAccordion" class="collapse">
@@ -97,18 +148,15 @@
                   </li>
                   <li>***</li>
                 </ul>
+                <button type="button" class="applyBtn btn-secondary btn-lg" style="width:20%">
+                  Apply
+                </button>
               </div>
             </div>
-<br>
-            <button
-              type="button"
-              class="btn btn-danger"
-              data-toggle="collapse"
-              data-target="#collapsible-4"
-            >
-              <span class=""></span>Home loan for NRI<span
-                class="indicator"
-              ></span>
+            <br>
+            <button type="button" class="btn btn-primary btn-lg btn-block btn-color" data-toggle="collapse"
+              data-target="#collapsible-4">
+              <span class=""></span>Home loan for NRI<span class="indicator"></span>
             </button>
 
             <div id="collapsible-4" data-parent="#myAccordion" class="collapse">
@@ -132,6 +180,9 @@
                   <li>Proprietorship concern</li>
                   <li>NGOs or related organisations</li>
                 </ul>
+                <button type="button" class="applyBtn btn-secondary btn-lg" style="width:20%">
+                  Apply
+                </button>
               </div>
             </div>
             <br />
