--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-light sticky-top" style="background-color: #aad2ee">
+<nav class="navbar navbar-light sticky-top" style="background-color: #444242; ">
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" routerLink="/home">Navbar</a>
+    <img src="https://seeklogo.com/images/H/home-loan-logo-47AE303918-seeklogo.com.png" routerLink="/home"/>
     <button
       class="navbar-toggler"
       type="button"
@@ -21,23 +21,23 @@
         </li>
         
         <li class="nav-item dropdown dropdown-menu">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" aria-haspopup="true"   aria-expanded="false" routerLink="/Loan">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink " aria-haspopup="true"   aria-expanded="false" routerLink="/Loan">
               Loan <span class="sr-only"></span>
         </a>
-          <div class="menu-content">
+          <div class="menu-content" id ="liBackgroundColor">
             <a class="links-hidden" routerLink="/homeloan">Home loan</a>
             <a class="links-hidden" href="#">Plot loan</a>
             <a class="links-hidden" href="#">Home renovation loan</a>
           </div>
         </li>
 
-        <li class="nav-item dropdown dropdown-menu">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" aria-haspopup="true"   aria-expanded="false" routerLink="/Loan">
+        <li class="nav-item dropdown dropdown-menu ">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink " aria-haspopup="true"   aria-expanded="false" >
                 Calculator <span class="sr-only"></span>
           </a>
-            <div class="menu-content">
-              <a class="links-hidden" href="#">Eligibility</a>
-              <a class="links-hidden" href="#">EMI</a>
+            <div class="menu-content " id ="liBackgroundColor">
+              <a class="links-hidden" routerLink="">Eligibility</a>
+              <a class="links-hidden" routerLink="/calculator">EMI</a>
             </div>
           </li>
 
@@ -64,12 +64,10 @@
             libero fringilla, in pharetra sem ullamcorper.</p> -->
     <!-- <div class="bottom-left">Bottom Left</div> -->
     <div class="top-left">
-      <b
-        >ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum
+      <!-- <b>ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum
         quam odio, quis placerat ante luctus eu. id vulputate quam iaculis.
         Suspendisse consectetur mi id libero fringilla, in pharetra sem
-        ullamcorper.</b
-      >
+        ullamcorper.</b> -->
     </div>
     <!-- <div class="top-right">Top Right</div>
                 <div class="bottom-right">Bottom Right</div>
@@ -77,7 +75,7 @@
   </div>
 </header>
 
-<div style="height: 100%">
+<div style="background-color: rgb(250, 223, 173);">
   <router-outlet></router-outlet>
 </div>
 
@@ -131,19 +129,19 @@
   </div> -->
 
 <!-- Footer -->
-<footer class="page-footer font-small blue-grey lighten-5">
-  <div style="background-color: #21d192">
+<footer class="page-footer font-small blue-grey lighten-5" style="background-color: rgb(179, 171, 162);">
+  <div style="background-color: #7c7979; ">
     <div class="container">
       <!-- Grid row-->
       <div class="row py-4 d-flex align-items-center">
         <!-- Grid column -->
         <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-          <h6 class="mb-0">Get connected with us on social networks!</h6>
+          <h6 class="mb-0" style="color: antiquewhite;">Get connected with us on social networks!</h6>
         </div>
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-6 col-lg-7 text-center text-md-right">
+        <div class="col-md-6 col-lg-7 text-center text-md-right" >
           <!-- Facebook -->
           <a class="fb-ic">
             <i class="fab fa-facebook-f white-text mr-4"> </i>
