committed for adding user in db.json

--- a/src/app/Components/registration/registration.component.css
+++ b/src/app/Components/registration/registration.component.css
@@ -2,8 +2,21 @@
  margin-left: 25%;
  width: 50%;
 }
+.btn-success{
+    margin-left: 25%;
+ width: 50%;
+}
 .col-form-label{
  margin-left: 25%;
+}
+.radioButton{
+    margin-left: 25%;
+    margin-right: 5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+.radio{
+    margin-right: 1%;
 }
 .text-danger{
     margin-left: 25%;
