--- a/src/app/Components/registration/registration.component.html
+++ b/src/app/Components/registration/registration.component.html
@@ -1,5 +1,6 @@
-<section>
+<section >
     <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
+      <!-- (ngSubmit)="onSubmit()" -->
         <div class="form-group">
             <label class="col-form-label">First Name </label>
             <input id="firstname" name="firstname" type="firstname" class="form-control" formControlName="firstname">
@@ -21,7 +22,17 @@
                 class="text-danger">Name is required.</small>
 
         </div>
+        <div class="form-group">
+          <label class="radioButton">Gender</label>
+          <!-- <input id="gender" name="gender" type="gender" class="form-control"
+              formControlName="gender" placeholder="Gender" /> -->
+              Male <input type="radio" value="male" id="gender" name="gender" class="radio" formControlName="gender"> 
+              Female <input type="radio" value="female" id="gender" name="gender" class="radio" formControlName="gender"> 
+              Other <input type="radio" value="other" id="gender" name="gender" class="radio" formControlName="gender"> 
 
+          <small *ngIf="contactForm.get('gender').invalid && contactForm.get('gender').touched"
+              class="text-danger">Select gender</small>
+      </div>
         <!-- <div *ngIf="!lastname?.valid && (lastname?.dirty ||lastname?.touched)">
         <div [hidden]="lastname?.errors?.['pattern']">
             Only characters are allowed
@@ -36,9 +47,10 @@
 
 
         <div class="form-group">
-            <label class="col-form-label">Primary Email</label>
+            <label class="col-form-label">Email</label>
             <input id="primaryEmail" name="primaryEmail" type="email" class="form-control"
-                formControlName="primaryEmail" />
+                formControlName="primaryEmail" placeholder="Email" 
+              />
             <small *ngIf="contactForm.get('primaryEmail').invalid && contactForm.get('primaryEmail').touched"
                 class="text-danger">Email is required.</small>
         </div>
@@ -62,7 +74,7 @@
       </div>
     </div>
       -->
-        <!-- <p>
+    <!-- <p>
       <label for="gender">Geneder </label>
       <input type="radio" value="male" id="gender" name="gender" formControlName="gender"> Male
       <input type="radio" value="female" id="gender" name="gender" formControlName="gender"> Female
@@ -73,7 +85,31 @@
       </div>
     </div>        -->
 
-        <button [disabled]="contactForm.invalid" type="submit" class="button">Submit</button>
+    <div class="form-group">
+      <label class="col-form-label">Mobile Number</label>
+      <input id="mobileNo" name="mobileNo" type="" class="form-control"
+          formControlName="mobileNo" placeholder="Mobile Number" />
+      <small *ngIf="contactForm.get('mobileNo').invalid && contactForm.get('mobileNo').touched"
+          class="text-danger">Mobile Number is required.</small>
+  </div>
+
+  <div class="form-group">
+    <label class="col-form-label">Current Location</label>
+    <input id="currentLoc" name="currentLoc" type="" class="form-control"
+        formControlName="currentLoc" placeholder="Current Location" />
+    <small *ngIf="contactForm.get('currentLoc').invalid && contactForm.get('currentLoc').touched"
+        class="text-danger">Current Location is required.</small>
+</div>
+
+
+<div class="form-group">
+  <label class="col-form-label">Loan Amount</label>
+  <input id="loanAmount" name="loanAmount" type="" class="form-control"
+      formControlName="loanAmount" placeholder="Loan Amount" />
+  <small *ngIf="contactForm.get('loanAmount').invalid && contactForm.get('loanAmount').touched"
+      class="text-danger">Loan Amount is required.</small>
+</div>
+        <button style="margin-top:30px;border: 1.5px solid;background-color: rgb(245, 167, 94); border-color: rgb(248, 122, 3);" type="submit" class="btn btn-success">Submit</button>
 
     </form>
 </section>
